Add zarf variables to control BB kustomization

--- a/manifests/big-bang.yaml
+++ b/manifests/big-bang.yaml
@@ -60,3 +60,4 @@ spec:
     substitute:
       ZARF_REGISTRY: "###ZARF_REGISTRY###"
       ZARF_REGISTRY_AUTH_PULL: "###ZARF_REGISTRY_AUTH_PULL###"
+      ZARF_VAR_BIGBANG_VERSION: "###ZARF_VAR_BIGBANG_VERSION###"
