--- a/kustomizations/kustomization.yaml
+++ b/kustomizations/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
-  - git::https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base?ref=tags/${ZARF_VAR_BIGBANG_VERSION}
+  - git::https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base?ref=tags/1.46.0
 
 configMapGenerator:
   - name: common
