--- a/zarf.yaml
+++ b/zarf.yaml
@@ -11,7 +11,7 @@ metadata:
 
 components:
   - name: flux
-    required: true
+    required: false
     manifests:
       - name: flux-installer
         kustomizations:
@@ -91,7 +91,7 @@ components:
     description: "Git repositories and OCI images used by PLG"
     required: true
     repos:
-      - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/loki.git@3.2.1-bb.1
+      - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/loki.git@3.2.1-bb.3
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/promtail.git@6.2.2-bb.2
     images:
       - "registry1.dso.mil/ironbank/opensource/grafana/loki:2.6.1"
@@ -99,7 +99,7 @@ components:
 
   - name: keycloak
     description: "Git repositories and OCI images used by Keycloak"
-    required: true
+    required: false
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/security-tools/keycloak.git@18.2.1-bb.5
     images:
