Initial commit for 1.48.0
Update references to 1.47.0 to 1.48.0

Enable initContainer in promtail to fix too many open files issue

Update zarf.yaml to include ubi8

Update zarf.yaml to remove ubi8

Remove initContainer in promtail. This needs reconciling in IaC

--- a/zarf.yaml
+++ b/zarf.yaml
@@ -33,7 +33,7 @@ components:
 
     images:
       - registry1.dso.mil/ironbank/big-bang/base:2.0.0
-      - registry1.dso.mil/ironbank/redhat/ubi/ubi8-minimal:8.6
+      - registry1.dso.mil/ironbank/redhat/ubi/ubi8-minimal:8.7
       - registry1.dso.mil/ironbank/opensource/kubernetes/kubectl:v1.25.3
       - registry1.dso.mil/ironbank/opensource/istio/install-cni:1.15.3
       - registry1.dso.mil/ironbank/opensource/istio/operator:1.15.3
@@ -47,6 +47,15 @@ components:
       - registry1.dso.mil/ironbank/opensource/kubernetes-sigs/metrics-server:0.6.1
       - registry1.dso.mil/ironbank/opensource/kubernetes/kube-state-metrics:v2.6.0
 
+  - name: setup
+    required: true
+    repos:
+      - https://github.com/defenseunicorns/zarf-package-big-bang.git@###ZARF_PKG_VAR_BIGBANG_VERSION###
+    manifests:
+      - name: big-bang-config
+        files:
+          - manifests/setup.yaml
+
   - name: policy-kyverno
     description: "Git repositories and OCI images used by Kyverno Policy Engine"
     required: true
@@ -54,8 +63,8 @@ components:
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno.git
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno-policies.git
     images:
-      - registry1.dso.mil/ironbank/nirmata/kyverno:v1.8.0
-      - registry1.dso.mil/ironbank/nirmata/kyvernopre:v1.8.0
+      - registry1.dso.mil/ironbank/nirmata/kyverno:v1.8.1
+      - registry1.dso.mil/ironbank/nirmata/kyvernopre:v1.8.1
       
   - name: observability-tracing
     description: "Git repositories and OCI images used by Big Bang observability & tracing"
@@ -67,8 +76,8 @@ components:
     images:
       - registry1.dso.mil/ironbank/opensource/jaegertracing/all-in-one:1.39.0
       - registry1.dso.mil/ironbank/opensource/jaegertracing/jaeger-operator:1.39.0
-      - registry1.dso.mil/ironbank/opensource/kiali/kiali-operator:v1.58.0
-      - registry1.dso.mil/ironbank/opensource/kiali/kiali:v1.58.0
+      - registry1.dso.mil/ironbank/opensource/kiali/kiali-operator:v1.59.1
+      - registry1.dso.mil/ironbank/opensource/kiali/kiali:v1.59.1
       - registry1.dso.mil/ironbank/opensource/grafana/tempo-query:1.5.0
       - registry1.dso.mil/ironbank/opensource/grafana/tempo:1.5.0
 
@@ -100,6 +109,10 @@ components:
   - name: keycloak
     description: "Git repositories and OCI images used by Keycloak"
     required: false
+    manifests:
+      - name: keycloak
+        files:
+          - manifests/keycloak.yaml
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/security-tools/keycloak.git
     images:
@@ -113,7 +126,7 @@ components:
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/authservice.git
     images:
-      - registry1.dso.mil/ironbank/istio-ecosystem/authservice:0.5.2
+      - registry1.dso.mil/ironbank/istio-ecosystem/authservice:0.5.3
       
   - name: neuvector
     description: "Git repositories and OCI images used by Neuvector runtime security"
@@ -128,14 +141,14 @@ components:
 
   - name: big-bang-storage
     description: "Git repositories and OCI images need for Big Bang storage"
-    required: true
+    required: false
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio-operator.git
       - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio.git
     images:
       -  registry1.dso.mil/ironbank/opensource/minio/console:v0.21.1
-      -  registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-11-08T05-27-07Z
-      -  registry1.dso.mil/ironbank/opensource/minio/operator:v4.5.3
+      -  registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-11-17T23-20-09Z
+      -  registry1.dso.mil/ironbank/opensource/minio/operator:v4.5.4
 
   - name: big-bang-backup
     description: "Git repositories and OCI images used by Velero backup"
@@ -143,10 +156,10 @@ components:
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/cluster-utilities/velero.git
     images:
-      - registry1.dso.mil/ironbank/opensource/velero/velero:v1.9.2
+      - registry1.dso.mil/ironbank/opensource/velero/velero:v1.9.3
       # - "velero/velero-plugin-for-csi:v0.3.2"
       # - "velero/velero-plugin-for-aws:v1.5.2"
-      # - "registry1.dso.mil/ironbank/opensource/velero/velero-plugin-for-microsoft-azure:v1.5.1"
+      # - "registry1.dso.mil/ironbank/opensource/velero/velero-plugin-for-microsoft-azure:v1.5.2"
 
   - name: big-bang-umbrella-chart
     description: "Deploy a version of Big Bang Core with Keycloak deployed in-cluster"
