testing with nodeport setting for local deployment

--- a/kustomizations/values.yaml
+++ b/kustomizations/values.yaml
@@ -23,7 +23,8 @@ istio:
     enabled: true
   ingressGateways:
     public-ingressgateway:
-      type: "LoadBalancer"
+      #type: "LoadBalancer"
+      type: "NodePort"
       kubernetesResourceSpec:
         resources:
           requests:
@@ -33,7 +34,8 @@ istio:
             cpu: "500m"
             memory: "512Mi"
     passthrough-ingressgateway:
-      type: "LoadBalancer"
+      #type: "LoadBalancer"
+      type: "NodePort"
   values:
     istiod:
       resources:
