Test all-in-one kustomzation

--- a/kustomizations/kustomization.yaml
+++ b/kustomizations/kustomization.yaml
@@ -7,3 +7,12 @@ configMapGenerator:
     behavior: merge
     files:
       - values.yaml
+
+secretGenerator:
+  - name: realm
+    namespace: keycloak
+    files:
+      - ./files/realm.json
+
+generatorOptions:
+  disableNameSuffixHash: true
