Try json quoting

--- a/kustomizations/values.yaml
+++ b/kustomizations/values.yaml
@@ -688,8 +688,11 @@ addons:
         certauthority:
           stringData:
             cas.pem: '{{ .Files.Get "resources/dev/dod_cas.pem" }}'
+        customreg:
+          stringData:
+            customreg.yaml: '{{ .Files.Get "resources/dev/baby-yoda.yaml" }}'
         realm:
-          stringData: |
+          stringData: {{ |
             {
               "id": "baby-yoda",
               "realm": "baby-yoda",
@@ -4605,7 +4608,4 @@ addons:
               "clientPolicies": {
                 "policies": []
               }
-            }
-        customreg:
-          stringData:
-            customreg.yaml: '{{ .Files.Get "resources/dev/baby-yoda.yaml" }}'
+            } | toJson | quote }}
