Enable istio injection in podinfo ns

--- a/manifests/setup.yaml
+++ b/manifests/setup.yaml
@@ -6,6 +6,13 @@ metadata:
     owner: bigbang
   name: bigbang
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: podinfo
+  labels:
+    istio-injection: enabled
+---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
