--- a/zarf.yaml
+++ b/zarf.yaml
@@ -17,10 +17,10 @@ components:
         kustomizations:
           - https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base/flux?ref=###ZARF_PKG_VAR_BIGBANG_VERSION###
     images:
-      - registry1.dso.mil/ironbank/fluxcd/helm-controller:v0.26.0
-      - registry1.dso.mil/ironbank/fluxcd/kustomize-controller:v0.30.0
-      - registry1.dso.mil/ironbank/fluxcd/notification-controller:v0.28.0
-      - registry1.dso.mil/ironbank/fluxcd/source-controller:v0.31.0
+      - registry1.dso.mil/ironbank/fluxcd/helm-controller:v0.27.0
+      - registry1.dso.mil/ironbank/fluxcd/kustomize-controller:v0.31.0
+      - registry1.dso.mil/ironbank/fluxcd/notification-controller:v0.29.0
+      - registry1.dso.mil/ironbank/fluxcd/source-controller:v0.32.1
 
   - name: big-bang-base
     description: "Git repositories and OCI images used by Big Bang"
@@ -34,18 +34,18 @@ components:
     images:
       - registry1.dso.mil/ironbank/big-bang/base:2.0.0
       - registry1.dso.mil/ironbank/redhat/ubi/ubi8-minimal:8.7
-      - registry1.dso.mil/ironbank/opensource/kubernetes/kubectl:v1.25.3
-      - registry1.dso.mil/ironbank/opensource/istio/install-cni:1.15.3
-      - registry1.dso.mil/ironbank/opensource/istio/operator:1.15.3
-      - registry1.dso.mil/ironbank/opensource/istio/pilot:1.15.3
-      - registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.15.3
+      - registry1.dso.mil/ironbank/opensource/kubernetes/kubectl:v1.25.5
+      - registry1.dso.mil/ironbank/opensource/istio/install-cni:1.16.1
+      - registry1.dso.mil/ironbank/opensource/istio/operator:1.16.1
+      - registry1.dso.mil/ironbank/opensource/istio/pilot:1.16.1
+      - registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.16.1
       - registry1.dso.mil/ironbank/tetrate/istio/install-cni:1.15.1-tetratefips-v1
       - registry1.dso.mil/ironbank/tetrate/istio/istioctl:1.15.1-tetratefips-v1
       - registry1.dso.mil/ironbank/tetrate/istio/operator:1.15.1-tetratefips-v1
       - registry1.dso.mil/ironbank/tetrate/istio/pilot:1.15.1-tetratefips-v1
       - registry1.dso.mil/ironbank/tetrate/istio/proxyv2:1.15.1-tetratefips-v1
-      - registry1.dso.mil/ironbank/opensource/kubernetes-sigs/metrics-server:0.6.1
-      - registry1.dso.mil/ironbank/opensource/kubernetes/kube-state-metrics:v2.6.0
+      - registry1.dso.mil/ironbank/opensource/kubernetes-sigs/metrics-server:0.6.2
+      - registry1.dso.mil/ironbank/opensource/kubernetes/kube-state-metrics:v2.7.0
 
   - name: policy-kyverno
     description: "Git repositories and OCI images used by Kyverno Policy Engine"
@@ -67,8 +67,8 @@ components:
     images:
       - registry1.dso.mil/ironbank/opensource/jaegertracing/all-in-one:1.39.0
       - registry1.dso.mil/ironbank/opensource/jaegertracing/jaeger-operator:1.39.0
-      - registry1.dso.mil/ironbank/opensource/kiali/kiali-operator:v1.59.1
-      - registry1.dso.mil/ironbank/opensource/kiali/kiali:v1.59.1
+      - registry1.dso.mil/ironbank/opensource/kiali/kiali-operator:v1.60.0
+      - registry1.dso.mil/ironbank/opensource/kiali/kiali:v1.60.0
       - registry1.dso.mil/ironbank/opensource/grafana/tempo-query:1.5.0
       - registry1.dso.mil/ironbank/opensource/grafana/tempo:1.5.0
 
@@ -78,14 +78,14 @@ components:
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/monitoring.git
     images:
-      - registry1.dso.mil/ironbank/big-bang/grafana/grafana-plugins:9.2.2
-      - registry1.dso.mil/ironbank/kiwigrid/k8s-sidecar:1.19.5
+      - registry1.dso.mil/ironbank/big-bang/grafana/grafana-plugins:9.3.2
+      - registry1.dso.mil/ironbank/kiwigrid/k8s-sidecar:1.21.0
       - registry1.dso.mil/ironbank/opensource/ingress-nginx/kube-webhook-certgen:v1.3.0
-      - registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-config-reloader:v0.60.1
-      - registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-operator:v0.60.1
+      - registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-config-reloader:v0.61.1
+      - registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-operator:v0.61.1
       - registry1.dso.mil/ironbank/opensource/prometheus/alertmanager:v0.24.0
-      - registry1.dso.mil/ironbank/opensource/prometheus/node-exporter:v1.4.0
-      - registry1.dso.mil/ironbank/opensource/prometheus/prometheus:v2.39.1
+      - registry1.dso.mil/ironbank/opensource/prometheus/node-exporter:v1.5.0
+      - registry1.dso.mil/ironbank/opensource/prometheus/prometheus:v2.40.5
 
   - name: logging-plg
     description: "Git repositories and OCI images used by PLG"
@@ -94,8 +94,8 @@ components:
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/loki.git
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/promtail.git
     images:
-      - registry1.dso.mil/ironbank/opensource/grafana/loki:2.6.1
-      - registry1.dso.mil/ironbank/opensource/grafana/promtail:v2.6.1
+      - registry1.dso.mil/ironbank/opensource/grafana/loki:2.7.0
+      - registry1.dso.mil/ironbank/opensource/grafana/promtail:v2.7.0
 
   - name: keycloak
     description: "Git repositories and OCI images used by Keycloak"
@@ -123,7 +123,7 @@ components:
     images:
       - registry1.dso.mil/ironbank/neuvector/neuvector/enforcer:5.0.2
       - registry1.dso.mil/ironbank/neuvector/neuvector/manager:5.0.2
-      - registry1.dso.mil/ironbank/neuvector/neuvector/scanner:5
+      - registry1.dso.mil/ironbank/neuvector/neuvector/scanner:latest
       - registry1.dso.mil/ironbank/neuvector/neuvector/controller:5.0.2
 
   - name: big-bang-storage
@@ -133,8 +133,8 @@ components:
       - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio-operator.git
       - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio.git
     images:
-      -  registry1.dso.mil/ironbank/opensource/minio/console:v0.21.1
-      -  registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-11-17T23-20-09Z
+      -  registry1.dso.mil/ironbank/opensource/minio/console:v0.21.3
+      -  registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-11-26T22-43-32Z
       -  registry1.dso.mil/ironbank/opensource/minio/operator:v4.5.4
 
   - name: big-bang-backup
