--- a/kustomizations/podinfo/base/gitrepository.yaml
+++ b/kustomizations/podinfo/base/gitrepository.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: podinfo
 spec:
   interval: 5m
-  url: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__sandbox__podinfo.git
+  url: https://repo1.dso.mil/big-bang/apps/sandbox/podinfo.git
   ref:
-    tag: 6.0.0-bb.5
+    tag: 6.0.0-bb.7
   secretRef:
     name: private-git-server
