--- a/manifests/podinfo.yaml
+++ b/manifests/podinfo.yaml
@@ -4,6 +4,8 @@ metadata:
   name: podinfo
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: bigbang
   interval: 5m
   path: "./kustomizations/podinfo"
   prune: true
@@ -13,7 +15,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      namespace: bigbang
+      namespace: podinfo
       name: podinfo
   timeout: 15m
   postBuild:
