--- a/manifests/big-bang.yaml
+++ b/manifests/big-bang.yaml
@@ -47,10 +47,10 @@ spec:
       kind: HelmRelease
       namespace: bigbang
       name: monitoring
-        #- apiVersion: helm.toolkit.fluxcd.io/v2beta1
-        #kind: HelmRelease
-        #namespace: bigbang
-        #name: neuvector
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      namespace: bigbang
+      name: neuvector
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       namespace: bigbang
