--- a/kustomizations/values.yaml
+++ b/kustomizations/values.yaml
@@ -400,6 +400,27 @@ twistlock:
 kyverno:
   enabled: true
 
+kyvernopolicies:
+  enabled: true
+  values:
+    policies:
+      disallow-shared-subpath-volume-writes:
+        validationFailureAction: audit
+      restrict-host-ports: 
+        validationFailureAction: audit
+      restrict-capabilities:
+        validationFailureAction: audit
+      restrict-image-registries:
+        validationFailureAction: audit
+      disallow-host-namespaces:
+        validationFailureAction: audit
+      disallow-privileged-containers:
+        validationFailureAction: audit
+      require-non-root-user:
+        validationFailureAction: audit
+      restrict-host-path-mount-pv:
+        validationFailureAction: audit
+
 sso:
   oidc:
     host: keycloak.bigbang.dev
