Relax kyvero policy; set to audit for testing

--- a/kustomizations/values.yaml
+++ b/kustomizations/values.yaml
@@ -404,68 +404,22 @@ kyvernopolicies:
   enabled: true
   values:
     policies:
-      disallow-nodeport-services:
-        exclude:
-          any:
-          - resources:
-              namespaces:
-              - "zarf"
-      restrict-host-path-mount:
-        exclude:
-          any:
-          - resources:
-              namespaces:
-              - "kube-system"
-              - "local-path-storage"
-              - "zarf"
-        parameters:
-          allow:
-          - "/var/local-path-provisioner/*"
-          - "/var/lib/rancher/k3s/storage/*"
-      restrict-host-path-write:
-        exclude:
-          any:
-          - resources:
-              namespaces:
-              - "kube-system"
-              - "local-path-storage"
-              - "zarf"
-        parameters:
-          allow:
-          - "/var/local-path-provisioner/*"
-          - "/var/lib/rancher/k3s/storage/*"
-      restrict-host-path-mount-pv:
-        exclude:
-          any:
-          - resources:
-              namespaces:
-              - "kube-system"
-              - "local-path-storage"
-              - "zarf"
-        parameters:
-          allow:
-          - "/var/local-path-provisioner/*"
-          - "/var/lib/rancher/k3s/storage/*"
+      disallow-shared-subpath-volume-writes:
+        validationFailureAction: audit
+      restrict-host-ports: 
+        validationFailureAction: audit
+      restrict-capabilities:
+        validationFailureAction: audit
       restrict-image-registries:
-        skipOverlayMerge: true
-        exclude:
-          any:
-          - resources:
-              namespaces:
-              - "kube-system"
-              - "local-path-storage"
-              - "zarf"
-        parameters:
-          allow:
-            - "${ZARF_REGISTRY}"
-      restrict-volume-types:
-        exclude:
-          any:
-          - resources:
-              namespaces:
-              - "kube-system"
-              - "local-path-storage"
-              - "zarf"
+        validationFailureAction: audit
+      disallow-host-namespaces:
+        validationFailureAction: audit
+      disallow-privileged-containers:
+        validationFailureAction: audit
+      require-non-root-user:
+        validationFailureAction: audit
+      restrict-host-path-mount-pv:
+        validationFailureAction: audit
 
 sso:
   oidc:
