Update istio public gw to include podinfo

--- a/kustomizations/values.yaml
+++ b/kustomizations/values.yaml
@@ -148,7 +148,7 @@ istio:
           -----END CERTIFICATE-----
       ingressGateway: public-ingressgateway
       hosts:
-        - registry.{{ .Values.domain }}
+        - podinfo.{{ .Values.domain }}
     passthrough:
       ingressGateway: passthrough-ingressgateway
       hosts:
