--- a/kustomizations/podinfo/kustomization.yaml
+++ b/kustomizations/podinfo/kustomization.yaml
@@ -6,3 +6,15 @@ configMapGenerator:
     namespace: podinfo
     files:
       - values.yaml=files/values.yaml
+
+patchesStrategicMerge:
+- |-
+  apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: *
+  spec:
+    template:
+      metadata:
+        labels:
+          protect: keycloak
