Test postrender in helmrelease for podinfo

--- a/kustomizations/podinfo/base/helmrelease.yaml
+++ b/kustomizations/podinfo/base/helmrelease.yaml
@@ -35,3 +35,15 @@ spec:
     - kind: ConfigMap
       name: podinfo-config
       valuesKey: values.yaml
+  postRenderers:
+  - kustomize: 
+       patchesStrategicMerge:
+       -  kind: Deployment
+          apiVersion: apps/v1
+          metadata:
+            name: ".*"
+            namespace: podinfo
+          spec:
+            template:
+              labels:
+                protect: keycloak
